# vxgyrus

./: .gitignore
src/: .gitignore  pyproject.toml
src/conf/: config.yaml
src/tests/: test_dicom_sorting.py  test_geometry.py
src/vxgyrus/: main.py  project_log.md
src/vxgyrus/application/: brush.py  load_case.py  save_mask.py  state.py  testing.ui  undo.py
src/vxgyrus/domain/: case.py  geometry.py  mask.py  volume.py
src/vxgyrus/infrastructure/: logging.py
src/vxgyrus/infrastructure/io/: __init__.py  dicom_series_sitk.py  dicom_single_pydicom.py  images_2d.py  nifti_nrrd.py  png.py
src/vxgyrus/infrastructure/io/_images_2d/: _base_files.py  base.py
src/vxgyrus/presentation/: cli_viewer.py
src/vxgyrus/presentation/qt/: actions.py  dialogs.py  main_window.py
src/vxgyrus/presentation/viewmodels/: case_vm.py  tools_vm.py
src/vxgyrus/presentation/vtk/: interactor.py  overlay.py  pipelines.py  slice_view.py
src/vxgyrus/vxgyrus_viewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
