# pyproject.toml (uv + Python project metadata)
#
# Put here:
# - project name/version
# - dependencies (VTK, SimpleITK, pydicom, PySide6, hydra-core, numpy, pillow, etc.)
# - tooling configs (ruff/pytest) if you want
#
# Later:
# - run: uv lock
#
[project]
name = "vxgyrus_viewer"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
  "typing>=3.10.0.0",
  # "numpy",
  # "vtk",
  # "SimpleITK",
  # "pydicom",
  # "pillow",
  # "PySide6",
  # "hydra-core",
  # "omegaconf",
  "vtk>=9.5.2",
]

[tool.uv]
# dev-dependencies = ["pytest", "ruff"]
package = true

[tool.setuptools]
package-dir = {"" = "vxgyrus"}

[tool.setuptools.packages.find]
where = ["vxgyrus"]
